Fix post title too close from sides
Added some simple padding to prevent the title from touching the side of
the header area

--- a/app/_assets/_scss/_components.content-post.scss
+++ b/app/_assets/_scss/_components.content-post.scss
@@ -103,6 +103,7 @@ $break-wide-element: $wide-width + ($wide-width - $container-size) + 5em;
 
 
     .post__header--single{
+        @extend .ps\+;
 
         .post__title{
             @extend .mt;
